After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 730855 - Memory leaks in recent backend
Memory leaks in recent backend
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: recent backend
1.21.x
Other Linux
: Normal minor
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2014-05-27 22:05 UTC by Ross Lagerwall
Modified: 2014-05-30 06:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
recent: Plug a few memory leaks (1.33 KB, patch)
2014-05-27 22:07 UTC, Ross Lagerwall
committed Details | Review

Description Ross Lagerwall 2014-05-27 22:05:04 UTC
There are a few small memory leaks in the recent backend.
Comment 1 Ross Lagerwall 2014-05-27 22:07:26 UTC
Created attachment 277346 [details] [review]
recent: Plug a few memory leaks
Comment 2 Ondrej Holy 2014-05-29 12:39:46 UTC
Review of attachment 277346 [details] [review]:

Looks good, thanks!
Comment 3 Ross Lagerwall 2014-05-30 06:21:21 UTC
Pushed to master as 18b0274 and gnome-3-12 as a9361d3.  Thanks for the review.