recent: Plug a few memory leaks

https://bugzilla.gnome.org/show_bug.cgi?id=730855